Resolves: tdf#108708 set a min width for calc dropdown combobox button

Change-Id: I002350170cf30a3347ed0c4e4885109ef194458e
Reviewed-on: https://gerrit.libreoffice.org/39179
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>